--- a/docs/release-notes/2026.md
+++ b/docs/release-notes/2026.md
@@ -10,6 +10,23 @@
 
 **Other Changes:** ⚡
 
+- Updated multiple npm packages to latest versions.
+- Updated multiple python packages to latest versions.
+- Updated the description of `Always Search` setting in Edit Profile page to clarify that it ignores the youtube id and always searches for trailers.
+
+
+## **v0.6.9-beta** - _January 14, 2026_
+
+**What's New:** ✨
+
+- None in this release.
+
+**Bug Fixes:** 🐛
+
+- Fixed an issue where clicking on `Add New` button in Custom Filters dialog would open `Add Filter Dialog` and close immediately.
+
+**Other Changes:** ⚡
+
 - Updated Reverse Proxy documentation to improve clarity.
 
 ## **v0.6.8-beta** - _January 14, 2026_
