--- a/docs/release-notes/2026.md
+++ b/docs/release-notes/2026.md
@@ -1,19 +1,19 @@
-## **v0.6.9-beta** - _January 14, 2026_
+## **v0.6.10-beta** - _February 07, 2026_
 
 **What's New:** ✨
 
-- None in this release.
+- Updated the description of `Always Search` setting in Edit Profile page to clarify that it ignores the youtube id and always searches for trailers.
+- Added `Retry Count` setting in Edit Profile page to control the number of retry attempts for downloading trailers.
 
 **Bug Fixes:** 🐛
 
-- Fixed an issue where clicking on `Add New` button in Custom Filters dialog would open `Add Filter Dialog` and close immediately.
+- None in this release.
 
 **Other Changes:** ⚡
 
 - Updated multiple npm packages to latest versions.
 - Updated multiple python packages to latest versions.
-- Updated the description of `Always Search` setting in Edit Profile page to clarify that it ignores the youtube id and always searches for trailers.
-
+- Updated relevant documentation pages to reflect new changes and features.
 
 ## **v0.6.9-beta** - _January 14, 2026_
 
