--- a/docs/release-notes/2026.md
+++ b/docs/release-notes/2026.md
@@ -1,3 +1,38 @@
+## **v0.7.0-beta** - _February 11, 2026_
+
+**What's New:** ✨
+
+- Added **Events Tracking System** to track media lifecycle events. Events are automatically created for:
+    - `Media Added` - When a new media item is added from a connection refresh.
+    - `Monitor Changed` - When monitoring status changes for a media item.
+    - `YouTube ID Changed` - When the YouTube trailer ID is updated.
+    - `Trailer Detected` - When an existing trailer is found on disk.
+    - `Trailer Downloaded` - When a trailer is successfully downloaded.
+    - `Trailer Deleted` - When a trailer file is deleted.
+    - `Download Skipped` - When a trailer download is skipped (e.g., no results found).
+- New **Events Page** in the web UI to view all events with:
+    - Filtering by event type (All Events, Media Added, Monitor Changed, etc.).
+    - Filtering by event source (All Sources, User, System).
+    - Search/filter functionality to find specific events.
+    - Infinite scroll with automatic loading of more events.
+- **Media Events Section** added to Media Details page showing recent events for that media item.
+- New **Events API** endpoints for retrieving events with optional filtering by event type, source, and media ID.
+- Redesigned **Logs Page** to match the new Events page design:
+    - Cleaner row-based layout with log level icons and color coding.
+    - Log level badge, filename:lineno, and timestamp displayed as metadata.
+    - **Traceback Dialog** - Click the exception icon to view traceback details in a modal dialog instead of inline expansion.
+    - Media link arrow for logs with associated media items.
+
+**Bug Fixes:** 🐛
+
+- None in this release.
+
+**Other Changes:** ⚡
+
+- Events are stored in the database and can be queried via the API.
+- Updated logs page styling to be consistent with events page for a unified look and feel.
+- Various backend improvements for event tracking and database operations.
+
 ## **v0.6.10-beta** - _February 07, 2026_
 
 **What's New:** ✨
